--- a/index.html
+++ b/index.html
@@ -132,6 +132,12 @@
       <p>Learn how Egyptians greet each other in everyday conversations.</p>
     </div>
     <!-- يمكنك إضافة المزيد من الفيديوهات بنفس الطريقة -->
+         <div class="box">
+       <h3>Lesson 1: Greetings in Egyptian Arabic</h3>
+       <iframe src="https://www.youtube.com/embed/nKUIVL5RDaQ" title="YouTube Shorts Video" allowfullscreen></iframe>
+        <p>Learn how Egyptians greet each other in everyday conversations.</p>
+    </div>
+
   </div>
 </section>
 
@@ -177,3 +183,4 @@
 
 </body>
 </html>
+
