--- a/index.html
+++ b/index.html
@@ -132,7 +132,13 @@
       <p>Learn how Egyptians greet each other in everyday conversations.</p>
     </div>
     <!-- يمكنك إضافة المزيد من الفيديوهات بنفس الطريقة -->
-       
+          <div class="box">
+              <h3>Lesson 2: Asking for Directions</h3>
+                <iframe src="https://www.youtube.com/embed/NXmhi7uiX7k" 
+                title="YouTube Shorts Video" allowfullscreen></iframe>
+               <p>Learn how to ask and understand directions in Egyptian Arabic.</p>
+          </div>
+
 
   </div>
 </section>
@@ -179,5 +185,6 @@
 
 </body>
 </html>
+
 
 
