--- a/index.html
+++ b/index.html
@@ -127,13 +127,13 @@
   <div class="videos">
     <!-- فيديو شورت 1 -->
     <div class="box">
-      <h3>Lesson 1: Greetings in Egyptian Arabic</h3>
+      <h3>Lesson 1: Mind your own business</h3>
       <iframe src="https://www.youtube.com/embed/nKUIVL5RDaQ" title="YouTube Shorts Video" allowfullscreen></iframe>
       <p>Learn how Egyptians greet each other in everyday conversations.</p>
     </div>
     <!-- يمكنك إضافة المزيد من الفيديوهات بنفس الطريقة -->
           <div class="box">
-              <h3>Lesson 2: Asking for Directions</h3>
+              <h3>Lesson 2: You Command – I’m at Your Service</h3>
                 <iframe src="https://www.youtube.com/embed/NXmhi7uiX7k" 
                 title="YouTube Shorts Video" allowfullscreen></iframe>
                <p>Learn how to ask and understand directions in Egyptian Arabic.</p>
@@ -185,6 +185,7 @@
 
 </body>
 </html>
+
 
 
 
