--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
   <h2>Contact</h2>
   <p>
     YouTube Channel: <a href="#">Spoken Arabic Now</a><br />
-    Email: contact@spokenarabicnow.com
+    Email: spokenarabicnow@gmail.com
   </p>
 </section>
 
@@ -192,6 +192,7 @@
 
 </body>
 </html>
+
 
 
 
