--- a/index.html
+++ b/index.html
@@ -145,6 +145,19 @@
                title="YouTube Shorts Video" allowfullscreen></iframe>
              
             </div>
+        <!-- فيديو شورت 4 -->
+            <div class="box">
+                <h3>Lesson 4: Now way!, Holy cow</h3>
+               <iframe src="https://www.youtube.com/embed/75DuYX3lNFw" 
+                title="YouTube Shorts Video" allowfullscreen></iframe>
+           </div>
+    
+            <!-- فيديو شورت 5 -->
+           <div class="box">
+               <h3>Lesson 5: I am so done with this</h3>
+               <iframe src="https://www.youtube.com/embed/_fVm-Vwdr8k" 
+                title="YouTube Shorts Video" allowfullscreen></iframe>
+          </div>
 
 
   </div>
@@ -192,6 +205,7 @@
 
 </body>
 </html>
+
 
 
 
