--- a/index.html
+++ b/index.html
@@ -157,7 +157,14 @@
                <h3>Lesson 5: I am so done with this</h3>
                <iframe src="https://www.youtube.com/embed/_fVm-Vwdr8k" 
                 title="YouTube Shorts Video" allowfullscreen></iframe>
+             
+             <!-- فيديو شورت 6 -->
           </div>
+          <div class="box">
+              <h3>Lesson 6: Essential Phrases for Foreigners at Arab Airports</h3>
+               <iframe src="https://www.youtube.com/embed/_n0iZjkTZQI?t=2" 
+                title="YouTube Shorts Video" allowfullscreen></iframe>
+         </div>
 
 
   </div>
@@ -205,6 +212,7 @@
 
 </body>
 </html>
+
 
 
 
