--- a/index.html
+++ b/index.html
@@ -201,10 +201,11 @@
 <section id="contact">
   <h2>Contact</h2>
   <p>
-    YouTube Channel: <a href="#">Spoken Arabic Now</a><br />
+    YouTube Channel: <a href="https://www.youtube.com/@SpokenArabicNow/featured" target="_blank">Spoken Arabic Now</a><br />
     Email: spokenarabicnow@gmail.com
   </p>
 </section>
+
 
 <footer>
   <p>&copy; 2026 Spoken Arabic Now. All rights reserved.</p>
@@ -212,6 +213,7 @@
 
 </body>
 </html>
+
 
 
 
