--- a/index.html
+++ b/index.html
@@ -80,8 +80,12 @@
 <body>
 
 <header>
-  <h1>Spoken Arabic Now</h1>
-  <p>Learn Egyptian Arabic. Speak like real people.</p>
+   <img src="logo.png" alt="Spoken Arabic Now Logo" style="height:60px; margin-right:15px;">
+  <div>
+    <h1>Spoken Arabic Now</h1>
+    <p>Learn Egyptian Arabic. Speak like real people.</p>
+  </div>
+  
 </header>
 
 <nav>
@@ -213,6 +217,7 @@
 
 </body>
 </html>
+
 
 
 
