--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <body>
 
 <header>
-<img src="logo.png" alt="Spoken Arabic Now Logo">
+<img src="logo.png" alt="Spoken Arabic Now Logo" style="height:60px; width:auto;">
 
   <div>
     <h1>Spoken Arabic Now</h1>
@@ -218,6 +218,7 @@
 
 </body>
 </html>
+
 
 
 
