--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
       font-size: 1.3rem;
       margin-top: 10px;
     }
+    header {
+  display: flex;
+  align-items: center;
+  gap: 20px;          /* مسافة بين الشعار والنص */
+  padding: 20px;
+}
     nav {
       background: #1e1e1e;
       padding: 12px 0;
@@ -80,7 +86,7 @@
 <body>
 
 <header>
-<img src="logo.png" alt="Spoken Arabic Now Logo" style="height:60px; width:auto;">
+  <img src="logo.png" alt="Spoken Arabic Now Logo" style="height:90px; width:auto;">
 
   <div>
     <h1>Spoken Arabic Now</h1>
@@ -218,6 +224,7 @@
 
 </body>
 </html>
+
 
 
 
