--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
   align-items: center;
   gap: 160px;          /* مسافة بين الشعار والنص */
   padding: 20px;
+      padding-left: 80px;
+
 }
     nav {
       background: #1e1e1e;
@@ -224,6 +226,7 @@
 
 </body>
 </html>
+
 
 
 
