--- a/index.html
+++ b/index.html
@@ -215,6 +215,13 @@ footer a { color:#1976d2; text-decoration:none; }
       <iframe src="https://www.youtube.com/embed/_n0iZjkTZQI" allowfullscreen></iframe>
       <a class="button" href="https://www.youtube.com/shorts/_n0iZjkTZQI" target="_blank">Watch on YouTube</a>
     </div>
+
+    <!-- فيديو شورت 7 -->
+    <div class="box">
+      <h3>Lesson 7: Essential Phrases for Foreigners at Arab Airports – Part 02</h3>
+      <iframe src="https://www.youtube.com/embed/YOmZGtcyDgo" allowfullscreen></iframe>
+      <a class="button" href="https://www.youtube.com/watch?v=YOmZGtcyDgo" target="_blank">Watch on YouTube</a>
+    </div>
   </div>
 </section>
 
@@ -271,4 +278,5 @@ footer a { color:#1976d2; text-decoration:none; }
 </main>
 </body>
 </html>
+
 
