--- a/index.html
+++ b/index.html
@@ -222,7 +222,14 @@ footer a { color:#1976d2; text-decoration:none; }
       <iframe src="https://www.youtube.com/embed/YOmZGtcyDgo" allowfullscreen></iframe>
       <a class="button" href="https://www.youtube.com/watch?v=YOmZGtcyDgo" target="_blank">Watch on YouTube</a>
     </div>
+
+    <!-- فيديو شورت 8 -->
+<div class="box">
+  <h3>Lesson 8: Essential Phrases for Foreigners at Arab Airports – Part 03</h3>
+  <iframe src="https://www.youtube.com/embed/5dziHaKjj_g" allowfullscreen></iframe>
+  <a class="button" href="https://www.youtube.com/watch?v=5dziHaKjj_g" target="_blank">Watch on YouTube</a>
   </div>
+    
 </section>
 
 <section id="latest">
@@ -278,5 +285,6 @@ footer a { color:#1976d2; text-decoration:none; }
 </main>
 </body>
 </html>
+
 
 
