--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Spoken Arabic Now – Egyptian Dialect</title>
+
 <style>
+/* إعادة تعيين الهوامش والحشو لكل العناصر */
 * { margin:0; padding:0; box-sizing:border-box; }
 
+/* الجسم الرئيسي للموقع */
 body {
   font-family: Arial, Helvetica, sans-serif;
   background: #f9f9f9;
@@ -16,14 +19,14 @@ body {
   min-height:100vh;
 }
 
-/* Sidebar */
+/* القائمة الجانبية */
 .sidebar {
   width: 250px;
   background: #1e1e1e;
   color: #fff;
   flex-shrink:0;
   padding:20px;
-  position:sticky;
+  position:sticky; /* تبقى ثابتة عند التمرير */
   top:0;
   height:100vh;
   overflow-y:auto;
@@ -44,7 +47,7 @@ body {
 }
 .sidebar a:hover { color:#1976d2; }
 
-/* Main content */
+/* المحتوى الرئيسي */
 main {
   flex-grow:1;
   padding:20px 40px;
@@ -52,7 +55,7 @@ main {
   margin:auto;
 }
 
-/* Header */
+/* الهيدر - شعار الموقع والنصوص */
 header {
   display:flex;
   align-items:center;
@@ -61,15 +64,19 @@ header {
   flex-wrap:wrap;
 }
 header img {
-  height:140px;
+  height:140px; /* حجم الشعار */
   width:auto;
   border-radius:12px;
   border:2px solid #fff;
 }
-header div h1 { font-size:2.8rem; color:#0d47a1; margin-bottom:10px; }
+header div h1 { 
+  font-size:2.8rem; 
+  color:#0d47a1; 
+  margin-bottom:10px; 
+}
 header div p { font-size:1.3rem; }
 
-/* Sections */
+/* الأقسام */
 section { margin-bottom:60px; }
 section h2 {
   color: #1976d2;
@@ -80,7 +87,7 @@ section h2 {
   padding-bottom:5px;
 }
 
-/* Boxes */
+/* صناديق المحتوى */
 .features, .videos, .resources {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(280px,1fr));
@@ -100,7 +107,11 @@ section h2 {
   transform: translateY(-6px);
   box-shadow: 0 10px 25px rgba(0,0,0,0.15);
 }
-.box h3 { color:#0d47a1; margin-bottom:12px; font-size:1.4rem; }
+.box h3 { 
+  color:#0d47a1; 
+  margin-bottom:12px; 
+  font-size:1.4rem; 
+}
 .box p { flex-grow:1; margin-bottom:15px; }
 .box a.button {
   background-color:#1976d2;
@@ -114,9 +125,10 @@ section h2 {
 }
 .box a.button:hover { background-color:#0d47a1; }
 
-iframe { width:100%; height:315px; border-radius:12px; }
+/* حجم الفيديوهات */
+iframe { width:100%; height:450px; border-radius:12px; }
 
-/* Footer */
+/* الفوتر */
 footer {
   background: #1e1e1e;
   color: #fff;
@@ -126,6 +138,7 @@ footer {
 }
 footer a { color:#1976d2; text-decoration:none; }
 
+/* التصميم المتجاوب */
 @media(max-width:992px){
   body { flex-direction:column; }
   .sidebar { width:100%; height:auto; position:relative; }
@@ -136,7 +149,7 @@ footer a { color:#1976d2; text-decoration:none; }
 </head>
 <body>
 
-<!-- Sidebar -->
+<!-- القائمة الجانبية -->
 <div class="sidebar">
   <h2>Navigation</h2>
   <a href="#about">About</a>
@@ -147,8 +160,9 @@ footer a { color:#1976d2; text-decoration:none; }
   <a href="#contact">Contact</a>
 </div>
 
-<!-- Main content -->
+<!-- المحتوى الرئيسي -->
 <main>
+<!-- الهيدر -->
 <header>
   <img src="logo.png" alt="Spoken Arabic Now Logo">
   <div>
@@ -157,12 +171,14 @@ footer a { color:#1976d2; text-decoration:none; }
   </div>
 </header>
 
+<!-- قسم التعريف بالموقع -->
 <section id="about">
   <h2>About This Website</h2>
   <p>Spoken Arabic Now teaches <strong>Egyptian Spoken Arabic</strong>, not formal or textbook Arabic. Communicate naturally with real-life expressions Egyptians use daily.</p>
   <p>Focus on conversation, pronunciation, and real phrases heard in streets, cafes, and daily life.</p>
 </section>
 
+<!-- قسم الدروس -->
 <section id="lessons">
   <h2>What You Will Learn</h2>
   <div class="features">
@@ -181,58 +197,34 @@ footer a { color:#1976d2; text-decoration:none; }
   </div>
 </section>
 
+<!-- قسم الفيديوهات مع قوائم التشغيل -->
 <section id="videos">
-  <h2>Video Lessons</h2>
+  <!-- قائمة تشغيل Hotel & Booking Arabic -->
+  <h2>Video Lessons: Hotel & Booking Arabic</h2>
   <div class="videos">
-    <div class="box">
-      <h3>Lesson 1: Mind your own business</h3>
-      <iframe src="https://www.youtube.com/embed/nKUIVL5RDaQ" allowfullscreen></iframe>
-      <a class="button" href="https://www.youtube.com/shorts/nKUIVL5RDaQ" target="_blank">Watch on YouTube</a>
-    </div>
-    <div class="box">
-      <h3>Lesson 2: You Command – I’m at Your Service</h3>
-      <iframe src="https://www.youtube.com/embed/NXmhi7uiX7k" allowfullscreen></iframe>
-      <a class="button" href="https://www.youtube.com/shorts/NXmhi7uiX7k" target="_blank">Watch on YouTube</a>
-    </div>
-    <div class="box">
-      <h3>Lesson 3: Stop Showing Off</h3>
-      <iframe src="https://www.youtube.com/embed/pn6B8bHghek" allowfullscreen></iframe>
-      <a class="button" href="https://www.youtube.com/shorts/pn6B8bHghek" target="_blank">Watch on YouTube</a>
-    </div>
-    <div class="box">
-      <h3>Lesson 4: Now way!, Holy cow</h3>
-      <iframe src="https://www.youtube.com/embed/75DuYX3lNFw" allowfullscreen></iframe>
-      <a class="button" href="https://www.youtube.com/shorts/75DuYX3lNFw" target="_blank">Watch on YouTube</a>
-    </div>
-    <div class="box">
-      <h3>Lesson 5: I am so done with this</h3>
-      <iframe src="https://www.youtube.com/embed/_fVm-Vwdr8k" allowfullscreen></iframe>
-      <a class="button" href="https://www.youtube.com/shorts/_fVm-Vwdr8k" target="_blank">Watch on YouTube</a>
-    </div>
-    <div class="box">
-      <h3>Lesson 6: Essential Phrases for Foreigners at Arab Airports – Part 01</h3>
-      <iframe src="https://www.youtube.com/embed/_n0iZjkTZQI" allowfullscreen></iframe>
-      <a class="button" href="https://www.youtube.com/shorts/_n0iZjkTZQI" target="_blank">Watch on YouTube</a>
-    </div>
-
-    <!-- فيديو شورت 7 -->
-    <div class="box">
-      <h3>Lesson 7: Essential Phrases for Foreigners at Arab Airports – Part 02</h3>
-      <iframe src="https://www.youtube.com/embed/YOmZGtcyDgo" allowfullscreen></iframe>
-      <a class="button" href="https://www.youtube.com/watch?v=YOmZGtcyDgo" target="_blank">Watch on YouTube</a>
-    </div>
-
-    <!-- فيديو شورت 8 -->
-<div class="box">
-  <h3>Lesson 8: Essential Phrases for Foreigners at Arab Airports – Part 03</h3>
-  <iframe src="https://www.youtube.com/embed/5dziHaKjj_g" allowfullscreen></iframe>
-  <a class="button" href="https://www.youtube.com/watch?v=5dziHaKjj_g" target="_blank">Watch on YouTube</a>
+    <iframe 
+      src="https://www.youtube.com/embed/videoseries?list=PL8QWngw15QN42teodZwRlLvLlhhGhdJuJ" 
+      title="Hotel & Booking Arabic Playlist" 
+      frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+      allowfullscreen>
+    </iframe>
   </div>
-    
+
+  <!-- قائمة تشغيل Arabic Survival Phrases -->
+  <h2>Video Lessons: Arabic Survival Phrases</h2>
+  <div class="videos">
+    <iframe 
+      src="https://www.youtube.com/embed/videoseries?list=PL8QWngw15QN7yGUvzEpQTrz5E0SDQW6kj" 
+      title="Arabic Survival Phrases Playlist" 
+      frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+      allowfullscreen>
+    </iframe>
+  </div>
 </section>
 
-
-
+<!-- قسم الموارد القابلة للتحميل -->
 <section id="resources">
   <h2>Downloadable Resources</h2>
   <div class="resources">
@@ -249,12 +241,14 @@ footer a { color:#1976d2; text-decoration:none; }
   </div>
 </section>
 
+<!-- قسم لماذا تعلم المصري -->
 <section id="egyptian">
   <h2>Why Egyptian Arabic?</h2>
   <p>Egyptian Arabic is the most widely understood dialect in the Arab world. Learning it allows you to communicate with millions of people across different countries.</p>
   <p>This platform teaches you how Egyptians really speak — simple, fast, and natural.</p>
 </section>
 
+<!-- قسم التواصل -->
 <section id="contact">
   <h2>Contact</h2>
   <p>
@@ -263,6 +257,7 @@ footer a { color:#1976d2; text-decoration:none; }
   </p>
 </section>
 
+<!-- الفوتر -->
 <footer>
   <p>&copy; 2026 Spoken Arabic Now. All rights reserved.</p>
 </footer>
@@ -270,6 +265,7 @@ footer a { color:#1976d2; text-decoration:none; }
 </main>
 </body>
 </html>
+
 
 
 
