--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Spoken Arabic Now – Egyptian Dialect</title>
 <style>
 * { margin:0; padding:0; box-sizing:border-box; }
@@ -183,55 +183,10 @@ footer a { color:#1976d2; text-decoration:none; }
 
 <section id="videos">
   <h2>Video Lessons</h2>
-  <div class="videos">
-    <div class="box">
-      <h3>Lesson 1: Mind your own business</h3>
-      <iframe src="https://www.youtube.com/embed/nKUIVL5RDaQ" allowfullscreen></iframe>
-      <a class="button" href="https://www.youtube.com/shorts/nKUIVL5RDaQ" target="_blank">Watch on YouTube</a>
-    </div>
-    <div class="box">
-      <h3>Lesson 2: You Command – I’m at Your Service</h3>
-      <iframe src="https://www.youtube.com/embed/NXmhi7uiX7k" allowfullscreen></iframe>
-      <a class="button" href="https://www.youtube.com/shorts/NXmhi7uiX7k" target="_blank">Watch on YouTube</a>
-    </div>
-    <div class="box">
-      <h3>Lesson 3: Stop Showing Off</h3>
-      <iframe src="https://www.youtube.com/embed/pn6B8bHghek" allowfullscreen></iframe>
-      <a class="button" href="https://www.youtube.com/shorts/pn6B8bHghek" target="_blank">Watch on YouTube</a>
-    </div>
-    <div class="box">
-      <h3>Lesson 4: Now way!, Holy cow</h3>
-      <iframe src="https://www.youtube.com/embed/75DuYX3lNFw" allowfullscreen></iframe>
-      <a class="button" href="https://www.youtube.com/shorts/75DuYX3lNFw" target="_blank">Watch on YouTube</a>
-    </div>
-    <div class="box">
-      <h3>Lesson 5: I am so done with this</h3>
-      <iframe src="https://www.youtube.com/embed/_fVm-Vwdr8k" allowfullscreen></iframe>
-      <a class="button" href="https://www.youtube.com/shorts/_fVm-Vwdr8k" target="_blank">Watch on YouTube</a>
-    </div>
-    <div class="box">
-      <h3>Lesson 6: Essential Phrases for Foreigners at Arab Airports – Part 01</h3>
-      <iframe src="https://www.youtube.com/embed/_n0iZjkTZQI" allowfullscreen></iframe>
-      <a class="button" href="https://www.youtube.com/shorts/_n0iZjkTZQI" target="_blank">Watch on YouTube</a>
-    </div>
-
-    <!-- فيديو شورت 7 -->
-    <div class="box">
-      <h3>Lesson 7: Essential Phrases for Foreigners at Arab Airports – Part 02</h3>
-      <iframe src="https://www.youtube.com/embed/YOmZGtcyDgo" allowfullscreen></iframe>
-      <a class="button" href="https://www.youtube.com/watch?v=YOmZGtcyDgo" target="_blank">Watch on YouTube</a>
-    </div>
-
-    <!-- فيديو شورت 8 -->
-<div class="box">
-  <h3>Lesson 8: Essential Phrases for Foreigners at Arab Airports – Part 03</h3>
-  <iframe src="https://www.youtube.com/embed/5dziHaKjj_g" allowfullscreen></iframe>
-  <a class="button" href="https://www.youtube.com/watch?v=5dziHaKjj_g" target="_blank">Watch on YouTube</a>
+  <div class="videos" id="videoContainer">
+    <!-- سيتم تعبئة الفيديوهات تلقائياً بواسطة JavaScript -->
   </div>
-    
 </section>
-
-
 
 <section id="resources">
   <h2>Downloadable Resources</h2>
@@ -258,7 +213,7 @@ footer a { color:#1976d2; text-decoration:none; }
 <section id="contact">
   <h2>Contact</h2>
   <p>
-    YouTube Channel: <a href="https://www.youtube.com/@SpokenArabicNow/featured" target="_blank">Spoken Arabic Now</a><br />
+    YouTube Channel: <a href="https://www.youtube.com/@SpokenArabicNow/featured" target="_blank">Spoken Arabic Now</a><br>
     Email: spokenarabicnow@gmail.com
   </p>
 </section>
@@ -267,6 +222,46 @@ footer a { color:#1976d2; text-decoration:none; }
   <p>&copy; 2026 Spoken Arabic Now. All rights reserved.</p>
 </footer>
 
-</main>
+<script>
+// ======= إعدادات الـ YouTube API =======
+const API_KEY = 'AIzaSyBmqOXUU7Y78OwsuAQtiuXLv76m5fzFYdQ'; // مفتاح API الخاص بك
+const PLAYLIST_ID = 'PL8QWngw15QN42teodZwRlLvLlhhGhdJuJ'; // ضع هنا Playlist ID الخاص بك
+const MAX_RESULTS = 50; // أقصى عدد فيديوهات يمكن جلبها في مرة واحدة
+
+const videoContainer = document.getElementById('videoContainer');
+
+// ======= دالة جلب الفيديوهات =======
+async function fetchVideos(pageToken = '') {
+  const url = `https://www.googleapis.com/youtube/v3/playlistItems?part=snippet&playlistId=${PLAYLIST_ID}&maxResults=${MAX_RESULTS}&pageToken=${pageToken}&key=${API_KEY}`;
+
+  const response = await fetch(url);
+  const data = await response.json();
+
+  data.items.forEach((item, index) => {
+    const videoId = item.snippet.resourceId.videoId;
+    const title = item.snippet.title;
+
+    const box = document.createElement('div');
+    box.classList.add('box');
+    box.innerHTML = `
+      <h3>${title}</h3>
+      <iframe src="https://www.youtube.com/embed/${videoId}" allowfullscreen></iframe>
+      <a class="button" href="https://www.youtube.com/watch?v=${videoId}" target="_blank">Watch on YouTube</a>
+    `;
+    videoContainer.appendChild(box);
+  });
+
+  // إذا كان هناك صفحة أخرى، جلبها تلقائياً
+  if(data.nextPageToken) {
+    fetchVideos(data.nextPageToken);
+  }
+}
+
+// ======= بدء جلب الفيديوهات =======
+fetchVideos();
+</script>
+
 </body>
 </html>
+
+
