--- a/index.html
+++ b/index.html
@@ -141,8 +141,7 @@ footer a { color:#1976d2; text-decoration:none; }
   <h2>Navigation</h2>
   <a href="#about">About</a>
   <a href="#lessons">Lessons</a>
-  <a href="#videos-arabic-survival">Arabic Survival Phrases</a>
-  <a href="#videos-hotel-booking">Hotel & Booking Arabic</a>
+  <a href="#videos">Video Lessons</a>
   <a href="#resources">Resources</a>
   <a href="#egyptian">Egyptian Arabic</a>
   <a href="#contact">Contact</a>
@@ -158,14 +157,12 @@ footer a { color:#1976d2; text-decoration:none; }
   </div>
 </header>
 
-<!-- عن الموقع -->
 <section id="about">
   <h2>About This Website</h2>
-  <p>Spoken Arabic Now teaches <strong>Egyptian Spoken Arabic</strong>, not formal Arabic. Communicate naturally with real-life expressions Egyptians use daily.</p>
+  <p>Spoken Arabic Now teaches <strong>Egyptian Spoken Arabic</strong>, not formal or textbook Arabic. Communicate naturally with real-life expressions Egyptians use daily.</p>
   <p>Focus on conversation, pronunciation, and real phrases heard in streets, cafes, and daily life.</p>
 </section>
 
-<!-- الدروس -->
 <section id="lessons">
   <h2>What You Will Learn</h2>
   <div class="features">
@@ -184,19 +181,58 @@ footer a { color:#1976d2; text-decoration:none; }
   </div>
 </section>
 
-<!-- Arabic Survival Playlist -->
-<section id="videos-arabic-survival">
-  <h2>Arabic Survival Phrases</h2>
-  <div class="videos" id="arabic-survival-container"></div>
+<section id="videos">
+  <h2>Video Lessons</h2>
+  <div class="videos">
+    <div class="box">
+      <h3>Lesson 1: Mind your own business</h3>
+      <iframe src="https://www.youtube.com/embed/nKUIVL5RDaQ" allowfullscreen></iframe>
+      <a class="button" href="https://www.youtube.com/shorts/nKUIVL5RDaQ" target="_blank">Watch on YouTube</a>
+    </div>
+    <div class="box">
+      <h3>Lesson 2: You Command – I’m at Your Service</h3>
+      <iframe src="https://www.youtube.com/embed/NXmhi7uiX7k" allowfullscreen></iframe>
+      <a class="button" href="https://www.youtube.com/shorts/NXmhi7uiX7k" target="_blank">Watch on YouTube</a>
+    </div>
+    <div class="box">
+      <h3>Lesson 3: Stop Showing Off</h3>
+      <iframe src="https://www.youtube.com/embed/pn6B8bHghek" allowfullscreen></iframe>
+      <a class="button" href="https://www.youtube.com/shorts/pn6B8bHghek" target="_blank">Watch on YouTube</a>
+    </div>
+    <div class="box">
+      <h3>Lesson 4: Now way!, Holy cow</h3>
+      <iframe src="https://www.youtube.com/embed/75DuYX3lNFw" allowfullscreen></iframe>
+      <a class="button" href="https://www.youtube.com/shorts/75DuYX3lNFw" target="_blank">Watch on YouTube</a>
+    </div>
+    <div class="box">
+      <h3>Lesson 5: I am so done with this</h3>
+      <iframe src="https://www.youtube.com/embed/_fVm-Vwdr8k" allowfullscreen></iframe>
+      <a class="button" href="https://www.youtube.com/shorts/_fVm-Vwdr8k" target="_blank">Watch on YouTube</a>
+    </div>
+    <div class="box">
+      <h3>Lesson 6: Essential Phrases for Foreigners at Arab Airports – Part 01</h3>
+      <iframe src="https://www.youtube.com/embed/_n0iZjkTZQI" allowfullscreen></iframe>
+      <a class="button" href="https://www.youtube.com/shorts/_n0iZjkTZQI" target="_blank">Watch on YouTube</a>
+    </div>
+
+    <!-- فيديو شورت 7 -->
+    <div class="box">
+      <h3>Lesson 7: Essential Phrases for Foreigners at Arab Airports – Part 02</h3>
+      <iframe src="https://www.youtube.com/embed/YOmZGtcyDgo" allowfullscreen></iframe>
+      <a class="button" href="https://www.youtube.com/watch?v=YOmZGtcyDgo" target="_blank">Watch on YouTube</a>
+    </div>
+
+    <!-- فيديو شورت 8 -->
+<div class="box">
+  <h3>Lesson 8: Essential Phrases for Foreigners at Arab Airports – Part 03</h3>
+  <iframe src="https://www.youtube.com/embed/5dziHaKjj_g" allowfullscreen></iframe>
+  <a class="button" href="https://www.youtube.com/watch?v=5dziHaKjj_g" target="_blank">Watch on YouTube</a>
+  </div>
+    
 </section>
 
-<!-- Hotel & Booking Playlist -->
-<section id="videos-hotel-booking">
-  <h2>Hotel & Booking Arabic</h2>
-  <div class="videos" id="hotel-booking-container"></div>
-</section>
 
-<!-- الموارد -->
+
 <section id="resources">
   <h2>Downloadable Resources</h2>
   <div class="resources">
@@ -213,14 +249,12 @@ footer a { color:#1976d2; text-decoration:none; }
   </div>
 </section>
 
-<!-- لماذا اللهجة المصرية -->
 <section id="egyptian">
   <h2>Why Egyptian Arabic?</h2>
   <p>Egyptian Arabic is the most widely understood dialect in the Arab world. Learning it allows you to communicate with millions of people across different countries.</p>
   <p>This platform teaches you how Egyptians really speak — simple, fast, and natural.</p>
 </section>
 
-<!-- تواصل معنا -->
 <section id="contact">
   <h2>Contact</h2>
   <p>
@@ -234,47 +268,5 @@ footer a { color:#1976d2; text-decoration:none; }
 </footer>
 
 </main>
-
-<!-- جافاسكريبت لجلب الفيديوهات من Playlists -->
-<script>
-const API_KEY = 'AIzaSyBmqOXUU7Y78OwsuAQtiuXLv76m5fzFYdQ'; // مفتاحك من Google Cloud
-
-// قوائم التشغيل
-const playlists = [
-  {id:'PL8QWngw15QN7yGUvzEpQTrz5E0SDQW6kj', container:'arabic-survival'}, // Arabic Survival
-  {id:'PL8QWngw15QN42teodZwRlLvLlhhGhdJuJ', container:'hotel-booking'}     // Hotel & Booking
-];
-
-// لكل قائمة، جلب الفيديوهات
-playlists.forEach(pl => fetchVideos(pl.id, pl.container));
-
-async function fetchVideos(playlistId, containerId, pageToken='') {
-  const url = `https://www.googleapis.com/youtube/v3/playlistItems?part=snippet&playlistId=${playlistId}&maxResults=50&pageToken=${pageToken}&key=${API_KEY}`;
-  const response = await fetch(url);
-  const data = await response.json();
-  const videoContainer = document.getElementById(containerId);
-
-  data.items.forEach(item=>{
-    if(!item.snippet.title || item.snippet.title.toLowerCase().includes('private')) return; // تجاهل Private
-    const videoId = item.snippet.resourceId.videoId;
-    const title = item.snippet.title;
-    const box = document.createElement('div');
-    box.classList.add('box');
-    box.innerHTML = `
-      <h3>${title}</h3>
-      <iframe src="https://www.youtube.com/embed/${videoId}" allowfullscreen></iframe>
-      <a class="button" href="https://www.youtube.com/watch?v=${videoId}" target="_blank">Watch on YouTube</a>
-    `;
-    videoContainer.appendChild(box);
-  });
-
-  if(data.nextPageToken) fetchVideos(playlistId, containerId, data.nextPageToken);
-}
-</script>
-
 </body>
 </html>
-
-
-
-
